# QRSolutions

./: LICENSE  QRSolutions.sln  README.md  pyproject.toml
.github/workflows/: publish.yml
QRSolutions/: AlphaNumericEncoding.py  ByteEncoding.py  KanjiEncoding.py  QRSolutions.pyproj  __init__.py  numericEncoder.py  typeSelector.py
scr/QRSolutions/: __about__.py  __init__.py  temp.py
