[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QRSolutions"
dynamic = ["version"]
description = 'A Package designed for the fast creation of QR Codes'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "henry112q", email = "138253381+henry112q@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/henry112q/QRSolutions#readme"
Issues = "https://github.com/henry112q/QRSolutions/issues"
Source = "https://github.com/henry112q/QRSolutions"

[tool.hatch.version]
path = "scr/QRSolutions/__about__.py"
function = "version"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/QRSolutions tests}"

[tool.coverage.run]
source_pkgs = ["qrsolutions", "tests"]
branch = true
parallel = true
omit = [
  "scr/QRSolutions/__about__.py",
]

[tool.coverage.paths]
qrsolutions = ["src/QRSolutions", "*/QRSolutions/src/QRSolutions"]

[tool.hatch.build.targets.wheel]
Packages = ["scr/QRSolutions"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
